--- a/styles/Darcula.qss
+++ b/styles/Darcula.qss
@@ -250,9 +250,27 @@ InfoFrame {
 	padding-right: 2px;
 }
 
+/* http://stackoverflow.com/a/17935692 Thank you poorly written Qt documentation. */
+QScrollBar::add-page:vertical,
+QScrollBar::sub-page:vertical,
+QScrollBar::add-page:horizontal,
+QScrollBar::sub-page:horizontal {
+    background: transparent;
+}
+QScrollBar::add-line:vertical,
+QScrollBar::add-line:horizontal,
+QScrollBar::sub-line:vertical,
+QScrollBar::sub-line:horizontal {
+	width: 0px;
+	height: 0px;
+}
+QScrollBar {
+	background: transparent;
+}
 QScrollBar:vertical {
 	border: none;
 	width: 12px;
+	/*background: red;*/
 }
 QScrollBar::handle:vertical {
 	background-color: #545454;
@@ -576,6 +594,12 @@ QSlider::groove:horizontal {
 QSlider::handle:horizontal {
 	image: url(styles:Darcula/slider.png);
 	margin: -5px 0;
+}
+QSlider::add-page:vertical {
+	background: white;
+}
+QSlider::sub-page:vertical {
+	background: pink;
 }
 
 QWidget#NewsBanner {
