--- a/styles/Darcula.qss
+++ b/styles/Darcula.qss
@@ -99,9 +99,8 @@ QToolBar > QMenu {
 	background-color: red;
 }
 ImprovedToolBar QSlider {
-	min-width: 100px;
+	min-width: 125px;
 }
-
 QToolButton {
 	border: 1px solid transparent;
 	border-radius: none;
@@ -209,6 +208,7 @@ QTabBar::close-button:hover {
 QTreeView {
 	background-color: #2B2B2B;
 	border: none;
+	/*alternate-background-color: false;*/
 }
 QTreeView::item:hover,
 QTreeView::branch:hover {
@@ -274,8 +274,8 @@ QScrollBar:vertical {
 }
 QScrollBar::handle:vertical {
 	background-color: #545454;
-	border-left: 2px solid #2B2B2B;
-	border-right: 2px solid #2B2B2B;
+	margin-left: 2px;
+	margin-right: 2px;
 	min-height: 35px;
 }
 QScrollBar:horizontal {
@@ -589,24 +589,31 @@ QSlider::groove:horizontal {
   border: 0px solid transparent;
   height: 4px;
   background: #999;
-  margin: 2px 0;
+}
+QSlider::sub-page:horizontal {
+	background: #999;
+}
+QSlider::add-page:horizontal {
+	background: #3C3F41;
 }
 QSlider::handle:horizontal {
-	image: url(styles:Darcula/slider.png);
-	margin: -5px 0;
+	image: url("styles:Darcula/hslider.png");
+	margin-top: -35px;
+	margin-bottom: -40px;
 }
-QSlider::add-page:vertical {
-	background: white;
+QSlider::handle:horizontal:hover {
 }
-QSlider::sub-page:vertical {
-	background: pink;
+QSlider::sub-page:horizontal:disabled {
+}
+QSlider::add-page:horizontal:disabled {
+}
+QSlider::handle:horizontal:disabled {
 }
 
 QWidget#NewsBanner {
 	background-color: transparent;
 	color: rgb(216,216,216);
 }
-
 QWidget#aboutTab {
 	margin-top: 10px;
 	background-color: #2B2B2B;
@@ -666,8 +673,6 @@ QDialog#connectDialog QListWidgetItem {
 	border: 1px solid yellow;
 }
 OptionsDialog {
-	/*border-bottom: 1px solid #515151;*/
-	margin-bottom: 39px;
 }
 OptionsDialog QListWidget#ContentsWidget {
 	background: #3E434C;
@@ -771,4 +776,66 @@ QToolBox::tab {
 
 QFrame#toolBox::item {
 	background: yellow;
+}
+
+QSpinBox {
+    padding-right: 15px; /* make room for the arrows */
+    /*border-image: url(:/images/frame.png) 4;*/
+    border-width: 3;
+}
+
+QSpinBox::up-button {
+    subcontrol-origin: border;
+    subcontrol-position: top right; /* position at the top right corner */
+
+    width: 16px; /* 16 + 2*1px border-width = 15px padding + 3px parent border */
+    /*border-image: url(:/images/spinup.png) 1;*/
+    border-width: 1px;
+}
+
+QSpinBox::up-button:hover {
+    /*border-image: url(:/images/spinup_hover.png) 1;*/
+}
+
+QSpinBox::up-button:pressed {
+    /*border-image: url(:/images/spinup_pressed.png) 1;*/
+}
+
+QSpinBox::up-arrow {
+    /*image: url(:/images/up_arrow.png);*/
+    width: 7px;
+    height: 7px;
+}
+
+QSpinBox::up-arrow:disabled, QSpinBox::up-arrow:off { /* off state when value is max */
+   /*image: url(:/images/up_arrow_disabled.png);*/
+}
+
+QSpinBox::down-button {
+    subcontrol-origin: border;
+    subcontrol-position: bottom right; /* position at bottom right corner */
+
+    width: 16px;
+    /*border-image: url(:/images/spindown.png) 1;*/
+    border-width: 1px;
+    border-top-width: 0;
+}
+
+QSpinBox::down-button:hover {
+    /*border-image: url(:/images/spindown_hover.png) 1;*/
+}
+
+QSpinBox::down-button:pressed {
+    /*border-image: url(:/images/spindown_pressed.png) 1;*/
+}
+
+QSpinBox::down-arrow {
+    /*image: url(:/images/down_arrow.png);*/
+    width: 7px;
+    height: 7px;
+}
+
+QSpinBox::down-arrow:disabled,
+QSpinBox::down-arrow:off { /* off state when value in min */
+   /*image: url(:/images/down_arrow_disabled.png);*/
 }
