--- a/styles/Darcula.qss
+++ b/styles/Darcula.qss
@@ -46,7 +46,6 @@ QObject#pageGeneral, QObject#pageDisplay, QObject#pageIgnore, QObject#pageWhispe
 	background: #3C3F41;
 }
 
-
 /*
  * Top menu bar
  * https://doc.qt.io/qt-5.6/stylesheet-examples.html#customizing-qmenubar
@@ -79,7 +78,6 @@ QMenu {
 QToolBar {
 	/* Yet another minor IntelliJ IDEA detail */
 	border-top: 1px solid #555555;
-	/* Finesse some padding into the buttons just like a I finessed your bitch. */
 	padding: 2px;
 	/* Disable the handle and make the bar static like IntelliJ IDEA */
 	/* https://doc.qt.io/qt-5.6/qtoolbar.html#movable-prop */
@@ -94,9 +92,9 @@ QToolBar::separator {
 	margin-left: 3px;
 	margin-right: 3px;
 }
+
 /* Can't seem to get this childish child object to cooperate. */
-QToolBar > QMenu {
-}
+QToolBar > QMenu {}
 ImprovedToolBar QSlider {
 	min-width: 125px;
 }
@@ -165,6 +163,9 @@ QToolButton::menu-button:pressed {
 QWidget#MainWindowServerTabsWidget {
 	border-top: 1px solid #282828;
 }
+PermGroupsListView {
+  background: #3E434C;
+}
 
 /*
  * Tab bar with tabs
@@ -191,9 +192,11 @@ ImprovedTabBarCloseButton:hover {
 	background: none;
 	border: none;
 }
+ImprovedTabBarCloseButton#ServerTabCloseButton,
+ImprovedTabBarCloseButton#ChatTabCloseButton {
+}
 QTabBar::tab:selected {
 	background-color: #515658;
-	/*border: 1px solid #282828;*/
 	border-bottom: none;
 }
 QTabBar::tab:!selected {
@@ -208,7 +211,6 @@ QTreeView {
 	background-color: #2B2B2B;
 	border: none;
 	qproperty-animated: 1;
-	/*alternate-background-color: 0;*/
 }
 QTreeView::item:hover,
 QTreeView::branch:hover {
@@ -581,7 +583,6 @@ QLabel#label_2 {
 
 ConnectionInfoDialog {
 	background-color: #3C3F41;
-	/*border-top: 3px solid red;*/
 }
 
 /* https://github.com/ethanhs/material/blob/master/QSlider.qss */
@@ -635,7 +636,6 @@ WebServerList {
 QTableCornerButton::section,
 QWidget#page1,
 QWidget#page2 {
-	background: red;
 }
 
 ImprovedWidget {
@@ -765,4 +765,25 @@ VADDisplay {
 
 QlistWidget#identitiesListWidget {
 	background-color: #2B2B2B;
+}
+
+QDockWidget {
+  border: 1px solid transparent;
+  titlebar-close-icon: url(:/icons/24/ic_close_black);
+}
+QDockWidget QWidget {}
+QDockWidget DockTitleWidget {}
+QDockWidget DockTitleWidget QPushButton,
+QDockWidget DockTitleWidget QToolButton {}
+QDockWidget DockTitleWidget QPushButton:hover,
+QDockWidget DockTitleWidget QToolButton:hover {
+  border-color: #8A8A8A;
+  border-radius: 2px;
+  background: qlineargradient(x1:0, y1 : 0, x2 : 0, y2 : 1,
+    stop : 0.0 #A0A0A0, stop : 0.3 #ACACAC,
+    stop : 0.7 #ABABAB, stop : 1.0 #A3A3A3);
+}
+QDockWidget DockTitleWidget QPushButton::menu-indicator,
+QDockWidget DockTitleWidget QToolButton::menu-indicator {
+  image: none;
 }
